style.css
/*Variables*/
*{
    font-family:  monospace, Arial, Helvetica, sans-serif;
    border:none !important;
}
:root{
    --background-color: rgb(39, 44, 68);
    --secondary-color: rgb(62, 69, 103);
    --navBar-color:rgb(50, 56, 85);
    --text-color: rgb(219, 221, 236);
}
html{
    padding:0;
    margin:0;
}

body{
    margin:0;
    padding:0;
    color: var(--text-color,white);
    background-color: var(--background-color,darkgrey);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3rem;
}


#homeLogo{
    font-size: 2rem;
    margin-right: 2rem;
}

/*Components*/
.component{
    height: auto;
    width: 70vw;
    display: flex;
    flex-direction: column;
    padding:6rem 3rem 6rem 3rem;
    margin-top: 3rem;
    align-items: center;
    border: 3px solid purple;
}   

h1{
    font-size: 3rem;
    padding: 0;
    margin:0;
}

.componentContent{
    display:flex;
    flex-direction: row;
    margin-top: 3rem;
    gap: 3.5rem;
    
    border: 3px solid lightgreen;
}

/*Navbar*/
#navBar{
    padding-left: 5rem;
    background-color: var(--navBar-color, darkgrey);
    width: 100vw;
    top:0;
    position:fixed;
}

.navBarLink{
    font-size: 1.5rem;
    padding: 0rem 1rem;
    transition: 0.5s;
}
.navBarLink:hover{
    font-size:2rem;
}

a:link,a:visited{
    color:white;
    text-decoration: none;
}
a:hover{
    border-radius: 25px;
    background-color: rgba(255, 255, 255, 0.108);  
}

/* Intro */
#intro{
    font-size: 2rem;
    display: flex;
    justify-content: center;
    text-align: center;
    gap: 2rem;
}
#introName{
    font-size: 6rem;
}
.introIcon{
    height: 6rem;
    width: 6rem;
    border-radius: 25px;
}
#links{
    display: flex;
    flex-direction: row;
    gap: 2rem;
}

/* About Me*/
#about{
    font-size: 1.5rem;
}
/*Projects*/
.project{
    width: 33%;
    background-color: var(--secondary-color);
    border: 3px solid red;
    border-radius: 25px;
    padding: 1rem;
}

.projectPic{
    width: 100%;
}

.projectIcon{
    width:3rem;
    padding: 1rem;
    float: right;
}

/*Experience*/
#jobs{
    flex-direction: column;
}
.job{
    background-color: var(--secondary-color);
    border: 3px solid red;
    border-radius: 25px;
    padding: 1rem;
    
}
.jobYears{
    float: right;
}

.skills{
    background-color: var(--secondary-color);
    border-radius: 25px;
    padding: 1rem;
}
.skills ul{
    font-size: 1.5rem;
}

